Getting stylesheet to work. Not there yet, embeded style rn

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="testStyle.css">
+    <!--  Google Fonts Links  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap" rel="stylesheet">
+    <!--<link rel="stylesheet" type="text/css" href="/static/style.css">-->
+    <style>
+        body {
+            background-color: #c6c6c6;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+        }
+
+        #mainDiv {
+            display: grid;
+            align-self: center;
+            justify-self: center;
+            height: 500px;
+            font-size: 30px;
+            font-family: 'Mr De Haviland', cursive;
+        }
+    </style>
 </head>
 <body>
+<nav>
+    <img src="/static/logo.jpg" alt="logo" height="75px" width="75px">
+    <ul>
+        <li>Resources</li>
+        <li>Register</li>
+        <li>Login</li>
+    </ul>
+</nav>
 <div id="mainDiv">
-<h1>Hello World</h1>
+<h1>Saving's Never Been So Easy</h1>
 </div>
 </body>
 </html>
