--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
     <!--  Google Fonts Links  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=GFS+Neohellenic&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap" rel="stylesheet">
     <!--<link rel="stylesheet" type="text/css" href="/static/style.css">-->
     <style>
         body {
-            background-color: #c6c6c6;
+            background-color: #e4f9ff;
             display: flex;
             justify-content: center;
             align-content: center;
@@ -24,6 +32,33 @@
             font-size: 30px;
             font-family: 'Mr De Haviland', cursive;
         }
+
+        li {
+            list-style: none;
+            font-family: 'Poiret One', cursive;
+        }
+
+        p {
+            font-family: 'GFS Neohellenic', sans-serif;
+            display: grid;
+            align-content: center;
+            justify-content: center;
+        }
+
+        .buttonHome {
+            height: 50px;
+            width: 100px;
+            border-radius: 40%;
+            background-color: #70cbff;
+        }
+
+        .paragraphs{
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            flex-direction: column;
+            width: 350px;
+        }
     </style>
 </head>
 <body>
@@ -36,7 +71,29 @@
     </ul>
 </nav>
 <div id="mainDiv">
-<h1>Saving's Never Been So Easy</h1>
+    <h1>Saving's Never Been So Easy</h1>
 </div>
+<div class="paragraphs">
+<p>Have you ever wondered why you never have anything left from your paychecks? Or does it always seem like it’s just a
+    waiting game until the next check, or it’s a picking game between which bills get paid this month because you just
+    can’t afford to pay. Well if you’re anything like me, then we’re in the same boat and you may be asking yourself how
+    to switch things up to take control of your finances.</p>
+<p>Learning where my money goes and tracking it was the first step to my journey. Understanding this is a huge part
+    because once you’re able to sit down and figure out what it is you’re spending your money on, then you’ll be able to
+    figure out where you’re able to make cut backs and create opportunity for savings. </p>
+<p>So what’s this website for?
+    As a developer, I realized that there are not many online tools to help with savings challenges to track your
+    progress. Theres plenty of options to get hands on books and PDF versions but I wanted something I could fill out
+    online, thus the idea to create this site came along! </p>
+<p>So how does it work?
+    Considering taking on your finances is a big step, getting all the help you can is everything. On the resources
+    page, you’ll be able to find different links and videos for help with your fincial journey as well as additional
+    resources to learn more about savings challenges! To actually access the challenges you’ll want create an account to
+    get started and then pick a challenge to go from there! </p>
+</div>
+<div class="buttonHome">
+    <a href="register.html">Get Started!</a>
+</div>
+
 </body>
 </html>
