--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -22,9 +22,7 @@
         }
         .img {
             border-radius: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+
         }
         .container{
             display: flex;
@@ -38,10 +36,15 @@
             justify-content: center;
             align-items: center;
             font-family: 'GFS Neohellenic', sans-serif;
+            width: 65%;
+            font-size: 22px;
         }
         sub {
             font-size: 24px;
             font-family: 'Over the Rainbow', cursive;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         h1 {
             font-family: 'Satisfy', cursive;
