--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -20,18 +20,21 @@
         body {
             background-color: lightgray;
         }
+
         .img {
             border-radius: 30px;
 
         }
-        .container{
+
+        .container {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            text-align: center;
         }
 
-        p{
+        p {
             display: grid;
             justify-content: center;
             align-items: center;
@@ -39,6 +42,7 @@
             width: 65%;
             font-size: 22px;
         }
+
         sub {
             font-size: 24px;
             font-family: 'Over the Rainbow', cursive;
@@ -46,13 +50,16 @@
             justify-content: center;
             align-items: center;
         }
+
         h1 {
             font-family: 'Satisfy', cursive;
             font-size: 48px;
         }
+
         nav {
             font-family: 'Satisfy', cursive;
         }
+
         #resourcesBody {
             display: grid;
         }
@@ -73,12 +80,28 @@
         <h1>Resources</h1>
     </div>
     <div id="resourcesBody">
-        <img class="img" src="https://images.pexels.com/photos/210600/pexels-photo-210600.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="finances" >
+        <img class="img"
+             src="https://images.pexels.com/photos/210600/pexels-photo-210600.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+             alt="finances">
         <sub>Savings</sub>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vulputate volutpat vitae cras leo tempus non nisl. Dignissim id quis sed posuere arcu. Porttitor mattis tortor neque morbi tellus risus. Aenean turpis neque mi in mauris volutpat nulla nam. Est phasellus tortor ut neque. Velit leo nec cursus penatibus pellentesque ornare faucibus curabitur. In eget et mi aliquet eu augue viverra diam. Purus dictum massa tempor cras aliquet turpis. Quam montes, ultricies sed egestas eu libero augue. Turpis imperdiet mauris ullamcorper sed faucibus scelerisque. Eleifend elementum ut rhoncus integer aliquet leo. Id in porta amet, id facilisis maecenas. At nec lorem a non purus ut diam turpis. Posuere tristique quam eu venenatis diam et.</p>
-        <img class="img" src="https://images.pexels.com/photos/5466785/pexels-photo-5466785.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="saving">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vulputate volutpat vitae cras leo tempus non nisl.
+            Dignissim id quis sed posuere arcu. Porttitor mattis tortor neque morbi tellus risus. Aenean turpis neque mi
+            in mauris volutpat nulla nam. Est phasellus tortor ut neque. Velit leo nec cursus penatibus pellentesque
+            ornare faucibus curabitur. In eget et mi aliquet eu augue viverra diam. Purus dictum massa tempor cras
+            aliquet turpis. Quam montes, ultricies sed egestas eu libero augue. Turpis imperdiet mauris ullamcorper sed
+            faucibus scelerisque. Eleifend elementum ut rhoncus integer aliquet leo. Id in porta amet, id facilisis
+            maecenas. At nec lorem a non purus ut diam turpis. Posuere tristique quam eu venenatis diam et.</p>
+        <img class="img"
+             src="https://images.pexels.com/photos/5466785/pexels-photo-5466785.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+             alt="saving">
         <sub>Finances</sub>
-        <p>Aenean at at tellus donec vulputate. Suspendisse malesuada elementum sodales enim aliquam sit ut. Massa ullamcorper volutpat sagittis luctus integer purus. Nec ut ultrices lacus, laoreet aliquam eget. Nisi id enim nec maecenas. Ut semper ultrices libero sit in molestie vulputate malesuada. Commodo vitae ante semper dignissim volutpat justo, nisi tincidunt sapien. Pellentesque elementum aliquam amet tincidunt ut. Bibendum suspendisse faucibus pulvinar aliquam sed. Ac viverra mollis eleifend in elit porttitor dolor at. Diam nunc nunc platea pretium iaculis nulla purus elementum a. Ornare morbi eu nec velit integer ante velit parturient. Gravida orci arcu eget diam sit eu, pretium lectus non. Orci phasellus et nullam dui cursus.</p>
+        <p>Aenean at at tellus donec vulputate. Suspendisse malesuada elementum sodales enim aliquam sit ut. Massa
+            ullamcorper volutpat sagittis luctus integer purus. Nec ut ultrices lacus, laoreet aliquam eget. Nisi id
+            enim nec maecenas. Ut semper ultrices libero sit in molestie vulputate malesuada. Commodo vitae ante semper
+            dignissim volutpat justo, nisi tincidunt sapien. Pellentesque elementum aliquam amet tincidunt ut. Bibendum
+            suspendisse faucibus pulvinar aliquam sed. Ac viverra mollis eleifend in elit porttitor dolor at. Diam nunc
+            nunc platea pretium iaculis nulla purus elementum a. Ornare morbi eu nec velit integer ante velit
+            parturient. Gravida orci arcu eget diam sit eu, pretium lectus non. Orci phasellus et nullam dui cursus.</p>
     </div>
     <div id="relatedVideos"><h1>Related Videos</h1></div>
 </div>
