--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -106,6 +106,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            text-align: center;
         }
     </style>
 </head>
