--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--  Google Fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manjari:wght@100&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <title>Login</title>
+    <style>
+        body {
+            display: block;
+            position: relative;
+            height: 100vh;
+        }
+
+        body::after {
+            content: "";
+            background-image: url("https://images.pexels.com/photos/4968663/pexels-photo-4968663.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
+            opacity: 15%;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            position: absolute;
+            z-index: -1;
+            background-size: cover;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+            font-family: 'Manjari', sans-serif;
+        }
+
+        input {
+            border-radius: 50px;
+            background-color: #d0cfcf;
+            outline: none;
+            border: transparent;
+            padding-bottom: 10px;
+            text-align: center;
+            align-items: center;
+        }
+
+        #btn {
+            display: flex;
+            border-radius: 50px;
+            width: 50px;
+            background-color: #7ef4ff;
+            outline: none;
+            border: transparent;
+            padding-bottom: 10px;
+            text-align: center;
+            align-items: center;
+            margin-top: 5px;
+        }
+
+        h1 {
+            font-family: 'Mr Dafoe', cursive;
+            font-size: 48px;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
+    <div class="container text-center">
+        <h1>Sign In</h1>
+        <div th:if="${param.error}">
+            Invalid Username and Password.
+        </div>
+        <br>
+        <div th:if="${param.logout}">
+            You have been logged out.
+        </div>
 
+        <form th:action="@{/login}" method="post">
+            <label for="username">Username</label><br>
+            <input id="username" name="username" type="text"/><br>
+            <label for="password">Password</label><br>
+            <input id="password" name="password" type="password"/><br>
+            <input id="btn" type="submit" value="Login"/>
+        </form>
+    </div>
+</div>
 </body>
 </html>
