--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,7 +22,7 @@
             padding: 0;
         }
         body {
-            background-color: #e8f4fa;
+            background-color: #fafaff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -56,6 +56,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            outline: none;
+
         }
 
         .paragraphs {
@@ -65,6 +67,7 @@
             flex-direction: column;
             width: 65%;
             font-size: 24px;
+            color: #5a5a5a;
         }
 
         #getStarted {
@@ -77,6 +80,8 @@
             /*align-content: center;*/
             font-family: 'GFS Neohellenic', sans-serif;
             font-size: 20px;
+            outline: none;
+            border: transparent;
         }
 
         #getStarted > a {
@@ -94,6 +99,7 @@
 
         #lightBulbs {
             border-radius: 50px;
+            margin-bottom: 50px;
         }
 
         #bulbs {
